# poweron-hub

./: .env.local  .env.local.example  .gitattributes  .gitignore  406_FIX_REPORT.md  AI_AGENT_AUDIT.md  B1_NAV_ENTRY_POINT_VERIFICATION.md  B30_NUMBERS_AUDIT_REPORT.md  B44_NETLIFY_TOML_AUDIT.md  CHANGELOG.md  DATA_INTEGRITY_AUDIT.md  HUNTER_AUDIT_SESSION_2.md  KPI-FIX-APR17-2026-1_REPORT.md  LAUNCH_READINESS.md  MERGE_CHECKLIST.md  MTO-AUDIT-MAY10-2026-1_REPORT.md  OUTSOURCE_LOG.md  PHASE_GH_COMPLETION_REPORT.md  PHASE_H_CAPACITOR_REPORT.md  POST_DEPLOY_FIX_REPORT.md  PROJECT_STATUS_SNAPSHOT_2026-03-28.md  PowerOn_Backup_2026-03-27_20-28-16.json  SK_KEY_AUDIT_2026-04-05.md  SK_KEY_AUDIT_2026-04-06.md  SVC_UNBILLED_AUDIT_REPORT.md  V3_ROADMAP.md  app-store-checklist.md  capacitor.config.ts  changed_files.txt  demo-fix.patch  desktop.ini  done.js  erschrisDesktopPower On Solutions APP - CoWorkgit reset HEAD~1  index.html  index_v15r.html.html  inject_RUNTIME-AUDIT.js  ios-permissions.md  merge_sp_wave1.cjs  merge_sp_wave2.cjs  merge_v4_wave1.cjs  (+93 more)
.hooks/: pre-commit
Sessions_Queue/_configurations/: IDEA_REFINEMENT_LOOP_TEMPLATE_v4_0.md  NEURAL_MAP_TEMPLATE_v4_0.md  NEURAL_WORLD_3D_SPEC_v4_0.md  POST_DEPLOYMENT_INTERVIEW_v4_0.md  (+2 more)
public/: manifest.json  sw.js
scripts/: deploy-edge-functions.sh
solarupgrade_agent_context/: SOLARUPGRADE_CLAUDE.md  SOLARUPGRADE_CODEX.md  SOLARUPGRADE_CURSOR.md  SOLARUPGRADE_SHARED_CONTEXT.md
src/: App.tsx  INTEGRATION_NOTES.md  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+885 files in other folders)
