[package]
name = "poweron-hub"
version = "2.0.0"
description = "PowerOn Hub Desktop"
authors = ["Power On Solutions"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "dialog-all",
  "fs-read-file",
  "fs-write-file",
  "fs-read-dir",
  "fs-create-dir",
  "notification-all",
  "path-all",
  "shell-open",
  "window-close",
  "window-hide",
  "window-show",
  "window-maximize",
  "window-minimize",
  "window-unmaximize",
  "window-unminimize",
  "window-start-dragging",
  "window-set-title",
  "window-set-size",
  "window-set-min-size",
  "window-center",
  "window-set-focus",
  "window-set-fullscreen",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
